Added Docker-compose and mongo.
