# udm_api/app.py
@@ -1,11 +1,18 @@
 #!/usr/bin/env python3
 import logging
+import os
+from pprint import pprint
 
 import connexion
 from connexion import NoContent
+from pymongo import MongoClient
+
+cwd = os.getcwd()
 
 
-def getSupiById(supi):
+def getSupiById(supi, dataset_names=None):
+    pprint(supi)
+    pprint(dataset_names)
     return NoContent, 200
 
 
@@ -29,7 +36,7 @@ def putRegistrationAmfNon3gppAccess():
     return NoContent, 200
 
 
-def patchRegistrationAmfNon3gppAccess():
+def patchRegistrationAmfNon3gppAccess(ueId, body):
     return NoContent, 200
 
 
@@ -38,14 +45,29 @@ def getRegistrationAmfNon3gppAccess(ueId):
 
 
 logging.basicConfig(level=logging.INFO)
-app = connexion.App(__name__, specification_dir='openapi/')
-app.add_api('TS29503_Nudm_UECM.yaml')
-app.add_api('TS29503_Nudm_SDM.yaml')
+# pprint(cwd)
+# spec = 'file:///' + cwd + '/openapi/'
+# pprint(spec)
+spec = '/openapi/'
+try:
+    app = connexion.App(__name__, specification_dir=spec)
+    app.add_api('TS29503_Nudm_UECM.yaml')
+    app.add_api('TS29503_Nudm_SDM.yaml')
 
-# set the WSGI application callable to allow using uWSGI:
-# uwsgi --http :8080 -w app
-application = app.app
+    # set the WSGI application callable to allow using uWSGI:
+    # uwsgi --http :8080 -w app
+    application = app.app
+except Exception as e:
+    pprint(e)
+
+# connect to MongoDB, change the << MONGODB URL >> to reflect your own connection string
+client = MongoClient('mongodb://mongodb:27017/')
+db = client.udm
 
 if __name__ == '__main__':
     # run our standalone gevent server
-    app.run(port=8080, server='gevent')
+    try:
+        app.run(port=8080, server='gevent')
+    except Exception as e:
+        pprint(e)
+        pprint(e.with_traceback())
